app/k8-Manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: netflix-app
        image: REGISTRY_PLACEHOLDER/REPO_PLACEHOLDER:latest
        ports:
        - containerPort: 80
