app/k8-Manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix-app

    # LoadBalancer will be created automatically by the cloud provider (AWS in this case)
